@@ -1,6 +1,8 @@
                     Changes made to Pyjamas since 0.5p1
                     -----------------------------------
 
+ * discarded strings are not getting translated anymore
+
  * Added --downloads-(yes/no) to buildall.sh and employeeadmin/build.sh
 
  * Added experimental support for MSHTML as a Pyjamas Desktop engine
